.kube/service-account.yml
# KUBERNETES_TOKEN=
#   kubectl get secret $(kubectl get secret --namespace web-app-template | grep cicd-token | awk '{print $1}') --namespace web-app-template -o jsonpath='{.data.token}' | base64 --decode && echo ""
# KUBERNETES_SERVER=
#   cat cat ~/.kube/config
#   Copy clusters[i].cluster.server
# KUBERNETES_CLUSTER_CERTIFICATE=
#   cat cat ~/.kube/config
#   Copy clusters[i].cluster['certificate-authority-data']

apiVersion: v1
kind: Namespace
metadata:
  name: web-app-template
