.kube/deployment.production.yml
apiVersion: v1
kind: Service
metadata:
  name: $CIRCLE_PROJECT_REPONAME
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: $CIRCLE_PROJECT_REPONAME
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $CIRCLE_PROJECT_REPONAME
spec:
  selector:
    matchLabels:
      app: $CIRCLE_PROJECT_REPONAME
  replicas: 2
  template:
    metadata:
      labels:
        app: $CIRCLE_PROJECT_REPONAME
    spec:
      containers:
        - name: $CIRCLE_PROJECT_REPONAME
          image: $DOCKERHUB_USERNAME/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1
          ports:
            - containerPort: 3000
