.kube/deployment.staging.yml
apiVersion: v1
kind: Service
metadata:
  name: $CIRCLE_PROJECT_REPONAME-staging
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: $CIRCLE_PROJECT_REPONAME-staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $CIRCLE_PROJECT_REPONAME-staging
spec:
  selector:
    matchLabels:
      app: $CIRCLE_PROJECT_REPONAME-staging
  replicas: 2
  template:
    metadata:
      labels:
        app: $CIRCLE_PROJECT_REPONAME-staging
    spec:
      containers:
        - name: $CIRCLE_PROJECT_REPONAME-staging
          image: $DOCKERHUB_USERNAME/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1
          ports:
            - containerPort: 3000
