.kube/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-app-template-ingress
  namespace: web-app-template
spec:
  tls:
    - hosts:
        - web-app-template.makewebtech.org
      secretName: web-app-template-ingress-tls
  rules:
    - host: web-app-template.makewebtech.org
      http:
        paths:
          - backend:
              serviceName: web-app-template
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-app-template-ingress-staging
  namespace: web-app-template
spec:
  tls:
    - hosts:
        - web-app-template.staging.makewebtech.org
      secretName: web-app-template-ingress-tls-staging
  rules:
    - host: web-app-template.staging.makewebtech.org
      http:
        paths:
          - backend:
              serviceName: web-app-template-staging
              servicePort: 80
---
